@@ -258,7 +258,8 @@ sub ready {
 =head1 SEE ALSO
 
 L<Coro::Channel>, L<Coro::Cont>, L<Coro::Specific>, L<Coro::Semaphore>,
-L<Coro::Signal>, L<Coro::State>, L<Coro::Event>.
+L<Coro::Signal>, L<Coro::State>, L<Coro::Event>, L<Coro::RWLock>,
+L<Coro::L<Coro::Handle>, L<Coro::Socket>.
 
 =head1 AUTHOR
 
